# nvidia-query-resource-opengl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
common/: nvidia-query-resource-opengl-ipc-util.c
include/: nvidia-query-resource-opengl-data.h  nvidia-query-resource-opengl-ipc-util.h  nvidia-query-resource-opengl-ipc.h  nvidia-query-resource-opengl.h
preload/: nvidia-query-resource-opengl-preload.c
tool/: main.c  nvidia-query-resource-opengl-data.c  nvidia-query-resource-opengl.c
